# VulRL

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/vulhub/: README.md
benchmark/vulhub/1panel/CVE-2024-39907/: docker-compose.yml
data_pre_process_scripts/vulhub_fix_port_bind_removal/: PROCESSING_REPORT.md
dataset/: README.md  dataset_converter.py  dataset_converter_v2.py  interactive_poc_generator_v2.py  run_inter_poc_gen.sh  true_positives_v4.txt  vulhub_dataset_builder.py
dataset/cve_vulhub/: train.jsonl  train.parquet
infra/: README.md  _registry.py  cve_exploit_env.py  lora_model_provider.py  main_training.py  pyproject.toml  test_launcher.py  test_unified_env.py  train_launcher.py  xbow_adapter.py
infra_v3/: ARCHITECTURE_SUMMARY.md  CALL_GRAPH.md  ENTRY_POINTS.md  PARALLEL_EXECUTION.md  PROGRESS.md  QUICK_START.md  README.md  STRUCTURE.md  SUMMARY.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TESTING_WITHOUT_INSPECT.md  pyproject.toml  test_interactive.py  test_trained_model.py
infra_v3/src/vulrl/: __init__.py
infra_v3/src/vulrl/config/: __init__.py  command_builder.py  env_config.py  reward_config.py  training_config.py
infra_v3/src/vulrl/loop_control/: __init__.py  batch_manager.py  checkpoint_manager.py  policy_updater.py  rollout_collector.py  trainer.py
infra_v3/src/vulrl/models/: __init__.py  model_provider.py  model_registry.py
infra_v3/src/vulrl/reward/: __init__.py  base_reward.py  composite_reward.py  step_reward.py  trajectory_reward.py  visual_reward.py
infra_v3/src/vulrl/scripts/: __init__.py  rl_launcher.py  test_launcher.py
worker_orchestrator/: README.md  requirements.txt  stop.sh
worker_orchestrator/ez_generator/: IMPLEMENTATION_SUMMARY.md  README.md  ez_vulrl_generator.py  main_vulrl_skyrl.py  run_vulrl_skyrl.sh
worker_orchestrator/test/ez_generator/: test_simple.py
worker_orchestrator/worker_unit/: __init__.py  docker_manager.py  llm_client.py  main.py  reward_calculator.py
(+278 files in other folders)
