[project]
name = "vulrl"
version = "0.1.0"
description = "Vulnerability RL Training Framework - Unified Security Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "docker>=7.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "torch>=2.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vulrl.adapters"]
vulhub = "vulrl.env.adapters.vulhub_adapter:VulhubAdapter"
cvebench = "vulrl.env.adapters.cvebench_adapter:CveBenchAdapter"
xbow = "vulrl.env.adapters.xbow_adapter:XbowAdapter"
